Undo hold-to-fold. Local Event triggers to predict remote events for smoother experience.

--- a/public/table.html
+++ b/public/table.html
@@ -177,7 +177,7 @@
       <div id="lower">
         <div id="allcards"></div>
         <div id="gamecommands">
-          <button id="cmdfold" class="hold gameinput">Fold</button>
+          <button id="cmdfold" class="gameinput">Fold</button>
           <button id="cmdcall" class="gameinput">Call</button>
           <button id="cmdbet" class="gameinput">Bet/Raise</button>
         </div>
